--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="jumbotron">
       <img src="ngo1.png" alt="150px" height="200px" width="200px" ><h4><b><i>Contact us mobile=9804725621 or email=mukhbiz1@gmail.com</i></b></h4>
       <img src="NGO.jpg" alt="30px" height="300px" width="1000px">
+    <img src="d.jpg" alt="30px" height="400px" width="1000px">
     <h1><b>BARASAT SOCIETY FOR SOCIAL ADVANCEMENT</b></h1>
     <h2><p><i>Barasat Society for Social Advancement has been working in Kolkata for over 15 years, focusing on alleviating poverty and social exclusion. We do this through well-planned and comprehensive programmes in health, education, livelihoods and disaster preparedness and response. We also focus on generating and sharing knowledge with diverse stakeholders to influence sustainable impact at scale. Our overall goal is the empowerment of women and girls from poor and marginalised communities, leading to improvement in their lives and livelihoods. We are part of the CARE International Confederation working in over 90 countries for a world where all people live with dignity and security.
 
@@ -31,7 +32,8 @@
             
             BSSA believes that unless members of the civil society are involved proactively in the process of development, sustainable change will not happen. Following this model of Civic Driven Change, Smile Foundation sensitizes and engages the civil society, making it an active partner in all its welfare initiatives.</b></i></p></h2>
     
-    <img src="b.jpg" alt="30px" height="400px" width="1000px">       
+    <img src="b.jpg" alt="30px" height="400px" width="1000px"> 
+    <img src="c.jpg" alt="30px" height="400px" width="1000px">
      <h2><b>Thanks for visting us</b></h2> 
        <h3><b>Dipak Mukherjee</b></h3>
        <h4><i><b>Secretary</b></i></h4>
